cctools_osx-arm64 has very old llvm bindings

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -147,7 +147,7 @@ outputs:
         - gmp
         - zlib
         - libiconv
-        - cctools_{{ cross_target_platform }}
+        - cctools  # _{{ cross_target_platform }}
         - clang
     files:
       - bin/gfortran   # [target_platform == cross_target_platform]
