--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -245,11 +245,14 @@ outputs:
         - test -f "${PREFIX}/lib/libgcc_s.1.1.dylib"
 
 about:
-  home: http://gcc.gnu.org/
+  home: https://gcc.gnu.org/
   license: GPL-3.0-only WITH GCC-exception-3.1
   license_family: GPL
   license_file: COPYING3
   summary: Fortran compiler and libraries from the GNU Compiler Collection
+  description: Fortran compiler and libraries from the GNU Compiler Collection
+  doc_url: https://gcc.gnu.org/onlinedocs/
+  dev_url: https://gcc.gnu.org/git/gcc.git
 
 extra:
   feedstock-name: gfortran_impl_osx-64
